Fix overflow property for body and html elements in App.css

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 body,
 html {
   width: 100%;
+  overflow: hidden;
 }
 * {
   box-sizing: border-box;
